--- a/css/idangerous.swiper.css
+++ b/css/idangerous.swiper.css
@@ -77,9 +77,9 @@
 /*  background-color: #CCC;
 	
 	con 100% se extiende x la ventana
-	sin 100% conserva proporcion cuando jquery le asigna altura*/
+	sin 100% conserva proporcion cuando jquery le asigna altura pero android no reconoce h asignada x jquery */
 	/*width: 100%;*/
-	height: 100%;/*para desktop browsers height va comentado*/
+	height: 100%;/* para desktop browsers height va comentado */
 	
 	/*margin: 0px auto;*/
 }
