--- a/css/idangerous.swiper.css
+++ b/css/idangerous.swiper.css
@@ -76,10 +76,10 @@
 .swiper-container, .swiper-slide, .swiper-slide img {
 /*  background-color: #CCC;
 	
-	con 100% se extiende x la ventana
-	sin 100% conserva proporcion cuando jquery le asigna altura pero android no reconoce h asignada x jquery */
+	con 100% img se extiende x la ventana
+	sin 100% img conserva proporcion cuando jquery le asigna altura pero android no reconoce ancho asignado x jquery */
 	/*width: 100%;*/
 	height: 100%;/* para desktop browsers height va comentado */
 	
-	/*margin: 0px auto;*/
+	margin: 0px auto;
 }
