--- a/css/swiper-demos.css
+++ b/css/swiper-demos.css
@@ -31,3 +31,21 @@
 .pagination-sd .swiper-active-switch {
 	background: #333;
 }
+
+/*
+.mc-control .swiper-slide {
+	text-align: center;
+}
+.mc-control .swiper-slide img {
+	width: 50px;
+	height: 50px;
+	position: relative;
+	top: 5px;
+	box-shadow:0px 2px 3px #000;
+	border-radius:3px;
+	display: inline-block;
+	margin: 0 5px;
+}
+.mc-control img.active {
+	top: -2px;
+}*/
