--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,11 @@ body {
 }
 
 .zoom {
+	background-color: #CCC;
 	display: none;
+	overflow: scroll;
+	width: 100%;
+	height: 100%;
 }
 
 .touch {
