--- a/css/style.css
+++ b/css/style.css
@@ -278,10 +278,14 @@ body {
 
 .zoomCont {
 	background-color: #CCC;
-	display: none;
 	overflow: scroll;
+	display: block;
+	float: none;
+	clear: both;
+	
 	width: 100%;
 	height: 100%;
+	visibility: hidden;
 }
 
 .touch {
