--- a/css/style.css
+++ b/css/style.css
@@ -279,13 +279,13 @@ body {
 #zoomCont { 
 	background-color: #CCC;
 	overflow: scroll;
-	display: block;
+	/*display: block;*/
 	float: none;
 	clear: both;
 
 	width: 100%;
 	height: 100%;
-	visibility: hidden;
+	/*visibility: hidden;*/
 }
 
 .touch {
