--- a/css/style.css
+++ b/css/style.css
@@ -279,17 +279,18 @@ body {
 #zoomCont { 
 	background-color: #444;
 	overflow: scroll;
-	/*display: block;*/
+	/*visibility: hidden;*/
+	
 	float: none;
 	clear: both;
 
 	width: 100%;
 	height: 100%;
-	/*visibility: hidden;*/
 
 	color: #FFF;
 }
 
+/*
 .touch {
 	-webkit-transition: all 500ms ease-in-out;
 	-moz-transition:    all 500ms ease-in-out;
@@ -299,14 +300,13 @@ body {
 }
 
 .zoomImgOn {
-	-ms-transform:     scale(1.9); /* IE 9 */
-    -webkit-transform: scale(1.9); /* Safari */
+	-ms-transform:     scale(1.9);
+    -webkit-transform: scale(1.9);
     transform:         scale(1.9);
-    /*overflow: scroll !important;*/
 }
 
 .zoomImgOff {
-	-ms-transform:     scale(1.0); /* IE 9 */
-    -webkit-transform: scale(1.0); /* Safari */
+	-ms-transform:     scale(1.0);
+    -webkit-transform: scale(1.0);
     transform:         scale(1.0);
-}
+}*/
