--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ body {
 
 #zoomCont { 
 	background-color: #444;
-	overflow: scroll;
+	/*overflow: scroll;*/
 	z-index: 100000000000000;
 
 	display: block;
@@ -287,11 +287,15 @@ body {
 	clear: both;
 
 	position: absolute;
+	top: 50%;
+	left: 50%;
+	
+	/*
 	top: 0px;
 	left: 0px;
 
 	width: 100%;
-	height: 100%;
+	height: 100%;*/
 
 	color: #FFF;
 	visibility: hidden;
