--- a/css/style.css
+++ b/css/style.css
@@ -287,8 +287,10 @@ body {
 	clear: both;
 
 	position: absolute;
-	top: 50%;
-	left: 50%;
+	/*top: 50%;
+	left: 50%;*/
+	top: 0px;
+	left: 0px;
 	
 	/*
 	top: 0px;
@@ -299,6 +301,10 @@ body {
 
 	color: #FFF;
 	visibility: hidden;
+}
+#zoomCont img {
+	top: 50%;
+	left: 50%;
 }
 
 /*
