--- a/css/style.css
+++ b/css/style.css
@@ -272,32 +272,19 @@ body {
 */
 
 body {
-	/* relleno de fondo */
+	/* fondo relleno */
 	background-image: url("../res/img/bg.jpg");
 }
 
 #zoomCont { 
 	background-color: #444;
-	/*overflow: scroll;*/
 	z-index: 100000000000000;
 
 	display: block;
 
-	float: none;
-	clear: both;
-
 	position: absolute;
-	/*top: 50%;
-	left: 50%;*/
 	top: 0px;
 	left: 0px;
-	
-	/*
-	top: 0px;
-	left: 0px;
-
-	width: 100%;
-	height: 100%;*/
 
 	color: #FFF;
 	visibility: hidden;
@@ -305,6 +292,8 @@ body {
 #zoomCont img {
 	top: 50%;
 	left: 50%;
+
+	margin: -960px 0px 0px -540px;
 }
 
 /*
