--- a/css/style.css
+++ b/css/style.css
@@ -289,12 +289,12 @@ body {
 	color: #FFF;
 	visibility: hidden;
 }
+/*
 #zoomCont img {
 	top: 50%;
 	left: 50%;
-
 	margin: -960px 0px 0px -540px;
-}
+}*/
 
 /*
 .touch {
