--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,7 @@ body {
 	background-color: #444;
 	z-index: 100000000000000;
 
-	display: block;
+	/*display: block;*/
 
 	position: absolute;
 	top: 0px;
